--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Welcome to Owen's Programming Portfolio</h1>
-  <p> Hi Ashley hehe u look GOOD
-  </p>
+  <h2> Hi Ashley hehe u look GOOD
+  </h2>
 </body>
 </html>
