--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
+  <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/csc106_banner.jpg">
 <title>Owen's Programming Portfolio</title>
 </head>
 <body>
 <h1>Welcome to Owen's Programming Portfolio</h1>
-  <h2> Hi Ashley hehe u look GOOD
-  </h2>
 </body>
 </html>
