--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <h1>Welcome to Owen's Programming Portfolio</h1>
   <table style="width:100%">
 <tr>
-<th>http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png</th>
+<td><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png">
 </tr>
 <tr>
-<td>http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png</td>
+<td><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png">
 </tr>
 <tr>
-<td>http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png</td>
+<td><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png">
 </tr>
 <tr>
-<td>http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png</td>
+<td><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png">
 </tr>
 </table>
 </body>
