--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 </head>
 <body>
 <h1>Welcome to Owen's Programming Portfolio</h1>
-  <table style="width:200%">
+  <table style="width:100%">
 <tr>
-<th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png">
+<th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"></th>
 </tr>
 <tr>
-<th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png">
+<th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"></th>
 </tr>
 <tr>
-<th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png">
+<th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"></th>
 </tr>
 <tr>
-<th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png">
+<th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"></th>
 </tr>
 </table>
 </body>
