--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png" style="width:50px;height:50px;"></th>
     <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png" style="width:50px;height:50px;"></th>
 </table>
+<p>My name is Owen Madsen. This website is my portfolio of programs that I have written for the CSC106 Computer Programming course at the University of Rhode Island. I designed the webpage myself using the html programming language. The Apps link above has apps I have written that run on phones. The Javascripts link above has Javascripts that I have written to be embedded in web pages.
+</p>
 </body>
 </html>
