--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
+<style>
+  body {color: black}
+  h1 {color: black}
+  p {color: black}
   <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/csc106_banner.jpg">
 <title>Owen's Programming Portfolio</title>
 </head>
