--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <style>
   body {color: black}
   h1 {color: black}
-  p {color: black}
+  p {color: black
+  font-size: 300%}
   <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/csc106_banner.jpg">
 <title>Owen's Programming Portfolio</title>
 </head>
