--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   body {color: black}
   h1 {color: black}
   p {color: black}
+  </style>
   <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/csc106_banner.jpg">
 <title>Owen's Programming Portfolio</title>
 </head>
