--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 <h1>Welcome to Owen's Programming Portfolio</h1>
-  <table>
-<th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png" style="width:100px;height:100px;"></th>
-    <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png" style="width:100px;height:100px;"></th> 
-    <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png" style="width:100px;height:100px;"></th>
-    <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png" style="width:100px;height:100px;></th>
+  <table style="width:100%">
+<th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png" style="width:50px;height:50px;"></th>
+    <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png" style="width:50px;height:50px;"></th> 
+    <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png" style="width:50px;height:50px;"></th>
+    <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png" style="width:50px;height:50px;"></th>
 </table>
 </body>
 </html>
