--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-  <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/csc106_banner.jpg">
+  <img src=”csc106_banner.jpg”>
 <title>Owen's Programming Portfolio</title>
 </head>
 <body>
