--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <h1>Welcome to Owen's Programming Portfolio</h1>
-  <table style="background-color:darkblue; width:50%">
-<th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png" </th>
+  <table style="width:50%">
+    <th style="background-color:dark blue;"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png" </th>
     <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png" </th> 
     <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png" </th>
     <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png" </th>
