--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Owen's Programming Portfolio</title>
 </head>
 <body>
-<img src=”csc106_banner.jpg”>
+<img src=”https://github.com/owen-madsen/owen-madsen.github.io/blob/master/csc106_banner.jpg?raw=true”>
 <h1>Welcome to Owen's Programming Portfolio</h1>
   <table style="width:50%">
     <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png" </th>
