--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html>
 <head>
 <meta charset="utf-8">
-  <img src=”http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/csc106_banner.jpg”>
 <title>Owen's Programming Portfolio</title>
-</head>
 <body>
+
 <h1>Welcome to Owen's Programming Portfolio</h1>
-  <table style="width:50%">
+<table style="width:50%">
     <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png" </th>
     <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png" </th> 
     <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png" </th>
     <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png" </th>
 </table>
-<p style="font-size:150%;">My name is Owen Madsen. This website is my portfolio of programs that I have written for the CSC106 Computer Programming course at the University of Rhode Island.<br> I designed the webpage myself using the html programming language. The Apps link above has apps I have written that run on phones. The Javascripts link above has Javascripts that I have written to be embedded in web pages.
+<p style="font-size:150%;">My name is Owen Madsen. This website is my portfolio of programs that I have written for the CSC106 Computer Programming course at the University of Rhode Island. I designed the webpage myself using the html programming language. The Apps link above has apps I have written that run on phones. The Javascripts link above has Javascripts that I have written to be embedded in web pages.
 </p>
+
+
 </body>
 </html>
 
