--- a/javascript.html
+++ b/javascript.html
@@ -2,13 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-  <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/csc106_banner.jpg">
 <title>Owen's Programming Portfolio</title>
 </head>
 <body>
-<h1>Owen's Javascripts Page</h1>
- 
-<p style="font-size:150%;">My name is Owen Madsen. This website is my portfolio of programs that I have written for the CSC106 Computer Programming course at the University of Rhode Island.<br> I designed the webpage myself using the html programming language. The Apps link above has apps I have written that run on phones.<br> The Javascripts link above has Javascripts that I have written to be embedded in web pages.
-</p>
+<img src="csc106_banner.jpg">
+<h1>Welcome to Owen's Programming Portfolio</h1>
 </body>
 </html>
