--- a/javascript.html
+++ b/javascript.html
@@ -7,6 +7,6 @@
 <body>
 <img src="csc106_banner.jpg">
 <h1>Welcome to Owen's Programming Portfolio</h1>
-  Back to <a href="index.html"> home page </a>
+  Back to <a href="https://owen-madsen.github.io/index.html"> home page </a>
 </body>
 </html>
