--- a/javascript.html
+++ b/javascript.html
@@ -6,6 +6,13 @@
 </head>
 <body>
 <img src="csc106_banner.jpg">
+ <table>
+  <tr>
+    <th>Company</th>
+    <th>Contact</th>
+    <th>Country</th>
+    <th>Country</th>
+  </tr>
 <h1>Welcome to Owen's Programming Portfolio</h1>
   Back to <a href="https://owen-madsen.github.io/index.html"> home page </a>
 </body>
