--- a/javascript.html
+++ b/javascript.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+ <style>
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;}
+ </style> 
 <meta charset="utf-8">
 <title>Owen's Programming Portfolio</title>
 </head>
