--- a/javascript.html
+++ b/javascript.html
@@ -13,12 +13,11 @@ table {
 <body>
 <img src="csc106_banner.jpg">
  <table>
-  <tr>
-    <th>Company</th>
-    <th>Contact</th>
-    <th>Country</th>
-    <th>Country</th>
-  </tr>
+    <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png" </th>
+    <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png" </th> 
+    <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png" </th>
+    <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png" </th>
+</table>
 <h1>Welcome to Owen's Programming Portfolio</h1>
   Back to <a href="https://owen-madsen.github.io/index.html"> home page </a>
 </body>
