--- a/javascript.html
+++ b/javascript.html
@@ -3,7 +3,7 @@
 <head>
  <style>
 table {
-  font-family: arial, sans-serif;
+ background-color: black;
   border-collapse: collapse;
   width: 100%;}
  </style> 
