--- a/javascript.html
+++ b/javascript.html
@@ -5,7 +5,8 @@
 table {
  background-color: black;
   border-collapse: collapse;
-  width: 100%;}
+  width: 100%;
+  border: 1px solid;}
  </style> 
 <meta charset="utf-8">
 <title>Owen's Programming Portfolio</title>
