--- a/javascript.html
+++ b/javascript.html
@@ -6,7 +6,8 @@ table {
  background-color: black;
   border-collapse: collapse;
   width: 100%;
-  border: 1px solid;}
+  border: 1px solid;
+  padding: 8px}
  </style> 
 <meta charset="utf-8">
 <title>Owen's Programming Portfolio</title>
