--- a/javascript.html
+++ b/javascript.html
@@ -20,7 +20,8 @@ table {
     <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png" </th>
     <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png" </th>
 </table>
-<h1>Welcome to Owen's Programming Portfolio</h1>
+<h1>Owen's Javascript Programs</h1>
+ <p> This page contains Javascripts apps that I have written and designed </p>
   Back to <a href="https://owen-madsen.github.io/index.html"> home page </a>
 </body>
 </html>
