--- a/javascript.html
+++ b/javascript.html
@@ -10,7 +10,7 @@ table {
   padding: 8px}
  </style> 
 <meta charset="utf-8">
-<title>Owen's Programming Portfolio</title>
+<title>Owen's Javascript Programs</title>
 </head>
 <body>
 <img src="csc106_banner.jpg">
