--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+table {
+ background-color: black;
+  border-collapse: collapse;
+  width: 50%;
+  border: 1px solid;
+  padding: 8px}
+ </style> 
 <meta charset="utf-8">
 <title>Owen's Programming Portfolio</title>
 </head>
