--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@ table {
 <title>Owen's Programming Portfolio</title>
 </head>
 <body>
-<table>
-    <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png" </th>
+<img src="csc106_banner.jpg">
+ <table>
+    <th>
+     <a href="https://owen-madsen.github.io/index.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </a> </th>
     <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png" </th> 
     <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png" </th>
     <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png" </th>
 </table>
-<img src="csc106_banner.jpg">
 <h1>Welcome to Owen's Programming Portfolio</h1>
 
 </body>
