--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@ table {
  <table>
     <th>
      <a href="https://owen-madsen.github.io/index.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </a> </th>
-    <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png" </th> 
-    <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png" </th>
-    <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png" </th>
+    <th>
+     <a href="https://owen-madsen.github.io/javascript.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png">  </a> </th> 
+    <th>
+     <a href="https://owen-madsen.github.io/apps.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> </a> </th>
+    <th>
+     <a href="https://owen-madsen.github.io/aboutme.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png" </a> </th>
 </table>
 <h1>Welcome to Owen's Programming Portfolio</h1>
 
