--- a/javascript.html
+++ b/javascript.html
@@ -15,10 +15,14 @@ table {
 <body>
 <img src="csc106_banner.jpg">
  <table>
-    <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png" </th>
-    <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png" </th> 
-    <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png" </th>
-    <th><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png" </th>
+    <th>
+     <a href="https://owen-madsen.github.io/index.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </a> </th>
+    <th>
+     <a href="https://owen-madsen.github.io/javascript.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png">  </a> </th> 
+    <th>
+     <a href="https://owen-madsen.github.io/apps.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> </a> </th>
+    <th>
+     <a href="https://owen-madsen.github.io/aboutme.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png" </a> </th>
 </table>
 <h1>Owen's Javascript Programs</h1>
  <p> This page contains Javascripts apps that I have written and designed </p>
