--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ table {
      <a href="https://owen-madsen.github.io/aboutme.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png" </a> </th>
 </table>
 <h1>Welcome to Owen's Programming Portfolio</h1>
-<p> My name is Owen Madsen. This website is my portfolio of programs that I have written for the CSC106 Computer Programming course at the University of Rhode Island. I designed the webpage myself using the html programming language. The Apps link above has apps I have written that run on phones. The Javascripts link above has Javascripts that I have written to be embedded in web pages.
+<p> My name is Owen Madsen. This website is my portfolio of programs that I have written for the CSC106 Computer Programming course at the University of Rhode Island. I designed the webpage myself using the html programming language. The Apps link above has apps I have written that run on phones. The Javascripts link above has Javascripts that I have written to be embedded in web pages. Ashley Loprete is my girlfriend and i'm getting hammered in Cola this weekend so boutta YEET this next assignment just a heads up lmao. 
 </p>
 
 
