--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ table {
  </style> 
 <meta charset="utf-8">
 <title>Owen's Programming Portfolio</title>
+ <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <img src="csc106_banner.jpg">
