--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ table {
 <title>Owen's Programming Portfolio</title>
 </head>
 <body>
-<img src="csc106_banner.jpg">
+<img src="myBanner.jpg">
  <table>
     <th>
      <a href="https://owen-madsen.github.io/index.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </a> </th>
