--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ table {
   width: 50%;
   border: 1px solid;
   padding: 8px}
+ body { background-image: url
  </style> 
 <meta charset="utf-8">
 <title>Owen's Programming Portfolio</title>
