--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ table {
   width: 50%;
   border: 1px solid;
   padding: 8px}
- body { background-image: url
+ body { background-image: url("https://github.com/owen-madsen/owen-madsen.github.io/blob/master/myBackground.jpg");
+}
  </style> 
 <meta charset="utf-8">
 <title>Owen's Programming Portfolio</title>
