--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ table {
   width: 50%;
   border: 1px solid;
   padding: 8px}
- body { background-image: url("https://github.com/owen-madsen/owen-madsen.github.io/blob/master/myBackground.jpg");
+ body { background-color: black;
 }
  </style> 
 <meta charset="utf-8">
