--- a/index.html
+++ b/index.html
@@ -1,29 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="style.css">
-<style>
-table {
- background-color: black;
-  border-collapse: collapse;
-  width: 50%;
-  border: 1px solid;
-  padding: 8px}
- </style> 
-<meta charset="utf-8">
 <title>Owen's Programming Portfolio</title>
+<meta charset="utf-8">
 </head>
 <body>
 <img src="myBanner.jpg">
  <table>
-    <th>
-     <a href="https://owen-madsen.github.io/index.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </a> </th>
-    <th>
-     <a href="https://owen-madsen.github.io/javascript.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png">  </a> </th> 
-    <th>
-     <a href="https://owen-madsen.github.io/apps.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> </a> </th>
-    <th>
-     <a href="https://owen-madsen.github.io/aboutme.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png" </a> </th>
+  <tr>
+    <td><a href="https://owen-madsen.github.io/index.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </a> </td>
+    <td><a href="https://owen-madsen.github.io/javascript.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png">  </a> </td> 
+    <td><a href="https://owen-madsen.github.io/apps.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> </a> </td>
+    <td><a href="https://owen-madsen.github.io/aboutme.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png" </a> </td>
+  </tr>   
 </table>
 <h1>Welcome to Owen's Programming Portfolio</h1>
 <p> My name is Owen Madsen. This website is my portfolio of programs that I have written for the CSC106 Computer Programming course at the University of Rhode Island. I designed the webpage myself using the html programming language. The Apps link above has apps I have written that run on phones. The Javascripts link above has Javascripts that I have written to be embedded in web pages. 
