--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Owen's Programming Portfolio</title>
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 <meta charset="utf-8">
 </head>
 <body>
