--- a/aboutme.html
+++ b/aboutme.html
@@ -9,6 +9,7 @@ table {
   border: 1px solid;
   padding: 8px}
   img { float: right; }
+  #surf {float: right;}
  </style> 
 <meta charset="utf-8">
 <title>About Me</title>
@@ -26,7 +27,7 @@ table {
      <a href="https://owen-madsen.github.io/aboutme.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png" </a> </th>
 </table>
 <h1>About Me</h1>
- <p> My name is Owen Madsen. I am a junior here at URI from Annapolis, Maryland. I am a communications major hoping to pursue and obtain a minor in computer science. This class will hopefully just be the beginning of my computer science career as it is already gaining my interest! <br> I enjoy surfing and having fun with friends in my spare time. <img src="Gansett Surf.jpeg" alt="surf" width="auto" height="auto" float: left;> I love the Los Angeles Chargers although they were much better in San Diego in my opinion. I am a huge wizards fan even though they are awful, their backcourt will always have a place in my heart. I have 3 siblings including 2 brothers and an older sister who actually just graduated with a Computer Science Degree who now works for Booze Allen Hamilton based out of their D.C. office, and she's having a wonderful time. Can't wait to learn more.</p>
+ <p> My name is Owen Madsen. I am a junior here at URI from Annapolis, Maryland. I am a communications major hoping to pursue and obtain a minor in computer science. This class will hopefully just be the beginning of my computer science career as it is already gaining my interest! <br> I enjoy surfing and having fun with friends in my spare time. <img src="Gansett Surf.jpeg" alt="surf" width="auto" height="auto" id="surf"> I love the Los Angeles Chargers although they were much better in San Diego in my opinion. I am a huge wizards fan even though they are awful, their backcourt will always have a place in my heart. I have 3 siblings including 2 brothers and an older sister who actually just graduated with a Computer Science Degree who now works for Booze Allen Hamilton based out of their D.C. office, and she's having a wonderful time. Can't wait to learn more.</p>
   Back to <a href="https://owen-madsen.github.io/index.html"> home page </a>
 </body>
 </html>
