--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@ table {
   border: 1px solid;
   padding: 8px}
   img { float: right; }
-  #surf {float: right;}
+  #surf {float: left;}
  </style> 
 <meta charset="utf-8">
 <title>About Me</title>
