--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@ table {
   width: 50%;
   border: 1px solid;
   padding: 8px}
-  img { float: right; }
+  img { float: left; }
   #surf {float: left;}
  </style> 
 <meta charset="utf-8">
