--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,9 @@ table {
   width: 50%;
   border: 1px solid;
   padding: 8px}
-  #surf {float: left;}
+  #surf {float: left;
+  height: 100%;
+  width: 100%;}
  </style> 
 <meta charset="utf-8">
 <title>About Me</title>
