--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,8 @@ table {
   padding: 8px}
   #surf {float: left;
   height: 50%;
-  width: 50%;}
+  width: 50%;
+  margin: 10px}
  </style> 
 <meta charset="utf-8">
 <title>About Me</title>
