--- a/aboutme.html
+++ b/aboutme.html
@@ -12,6 +12,8 @@ table {
   height: 50%;
   width: 50%;
   margin: 10px}
+  
+  p { margin: 5px;}
  </style> 
 <meta charset="utf-8">
 <title>About Me</title>
