--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <img src="myBanner.jpg">
  <table id="nav-table">
   <tr>
-    <td><a href="https://owen-madsen.github.io/index.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </a> </td>
-    <td><a href="https://owen-madsen.github.io/javascript.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png">  </a> </td> 
-    <td><a href="https://owen-madsen.github.io/apps.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> </a> </td>
-    <td><a href="https://owen-madsen.github.io/aboutme.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png" </a> </td>
+    <td><a href="https://owen-madsen.github.io/index.html"> <img src="home.jpg"> </a> </td>
+    <td><a href="https://owen-madsen.github.io/javascript.html"> <img src="javascripts.jpg">  </a> </td> 
+    <td><a href="https://owen-madsen.github.io/apps.html"> <img src="apps.jpg"> </a> </td>
+    <td><a href="https://owen-madsen.github.io/aboutme.html"> <img src="about.jpg" </a> </td>
   </tr>   
 </table>
 <h1>Welcome to Owen's Programming Portfolio</h1>
