--- a/javascript.html
+++ b/javascript.html
@@ -15,14 +15,10 @@ table {
 <body>
 <img src="csc106_banner.jpg">
  <table>
-    <th>
-     <a href="https://owen-madsen.github.io/index.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </a> </th>
-    <th>
-     <a href="https://owen-madsen.github.io/javascript.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png">  </a> </th> 
-    <th>
-     <a href="https://owen-madsen.github.io/apps.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> </a> </th>
-    <th>
-     <a href="https://owen-madsen.github.io/aboutme.html"> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png" </a> </th>
+    <td><a href="https://owen-madsen.github.io/index.html"> <img src="home.jpg"> </a> </td>
+    <td><a href="https://owen-madsen.github.io/javascript.html"> <img src="javascripts.jpg">  </a> </td> 
+    <td><a href="https://owen-madsen.github.io/apps.html"> <img src="apps.jpg"> </a> </td>
+    <td><a href="https://owen-madsen.github.io/aboutme.html"> <img src="about.jpg" </a> </td>
 </table>
 <h1>Owen's Javascript Programs</h1>
  <p> This page contains Javascripts apps that I have written and designed </p>
