--- a/javascript.html
+++ b/javascript.html
@@ -6,7 +6,7 @@
 <title>Owen's Javascript Programs</title>
 </head>
 <body>
-<img src="csc106_banner.jpg">
+<img src="myBanner.jpg">
  <table id="nav-table"> 
     <td><a href="https://owen-madsen.github.io/index.html"> <img src="home.jpg"> </a> </td>
     <td><a href="https://owen-madsen.github.io/javascript.html"> <img src="javascripts.jpg">  </a> </td> 
