--- a/apps.html
+++ b/apps.html
@@ -2,20 +2,12 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
- <style>
-table {
- background-color: black;
-  border-collapse: collapse;
-  width: 50%;
-  border: 1px solid;
-  padding: 8px}
- </style> 
 <meta charset="utf-8">
 <title>Owen's Apps</title>
 </head>
 <body>
-<img src="csc106_banner.jpg">
- <table>
+<img src="myBanner.jpg">
+ <table id="nav-table">
     <td><a href="https://owen-madsen.github.io/index.html"> <img src="home.jpg"> </a> </td>
     <td><a href="https://owen-madsen.github.io/javascript.html"> <img src="javascripts.jpg">  </a> </td> 
     <td><a href="https://owen-madsen.github.io/apps.html"> <img src="apps.jpg"> </a> </td>
