--- a/aboutme.html
+++ b/aboutme.html
@@ -3,12 +3,6 @@
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
  <style>
-table {
- background-color: black;
-  border-collapse: collapse;
-  width: 50%;
-  border: 1px solid;
-  padding: 8px}
   #surf {float: left;
   height: 30%;
   width: 30%;
@@ -25,7 +19,7 @@ table {
 </head>
 <body>
 <img src="csc106_banner.jpg">
- <table>
+ <table id="nav-table">
    <td><a href="https://owen-madsen.github.io/index.html"> <img src="home.jpg"> </a> </td>
     <td><a href="https://owen-madsen.github.io/javascript.html"> <img src="javascripts.jpg">  </a> </td> 
     <td><a href="https://owen-madsen.github.io/apps.html"> <img src="apps.jpg"> </a> </td>
