--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
 <title>About Me</title>
 </head>
 <body>
-<img src="csc106_banner.jpg">
+<img src="myBanner.jpg">
  <table id="nav-table">
    <td><a href="https://owen-madsen.github.io/index.html"> <img src="home.jpg"> </a> </td>
     <td><a href="https://owen-madsen.github.io/javascript.html"> <img src="javascripts.jpg">  </a> </td> 
