--- a/aboutme.html
+++ b/aboutme.html
@@ -11,6 +11,8 @@
   height: 30%;
   width: 30%;
   margin: 10px}
+  body {background-image: url"myBackground.jpg"};
+  }
   
   p { margin: 5px;}
  </style> 
