--- a/javascript.html
+++ b/javascript.html
@@ -16,5 +16,6 @@
 <h1>Owen's Javascript Programs</h1>
  <p> This page contains Javascripts apps that I have written and designed </p>
   Back to <a href="https://owen-madsen.github.io/index.html"> home page </a>
+ <h2><a href="https://www.khanacademy.org/computer-science/madsen_racingbitmoji/6178286814855168">Madsen_racingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-science/madsen_racingbitmoji/6178286814855168/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
 </body>
 </html>
