--- a/javascript.html
+++ b/javascript.html
@@ -3,6 +3,9 @@
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
 <meta charset="utf-8">
+<style> 
+ h1 {color:white;}
+ </style>
 <title>Owen's Javascript Programs</title>
 </head>
 <body>
