--- a/javascript.html
+++ b/javascript.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <style> 
  h1 {color:white;}
+ p  {color:white;}
  </style>
 <title>Owen's Javascript Programs</title>
 </head>
