--- a/javascript.html
+++ b/javascript.html
@@ -6,7 +6,8 @@
 <style> 
  h1 {color:white;}
  p  {color:white;}
- h2 {size: 100px;}
+ h2 {height: 50%;
+     width: 50%; }
  </style>
 <title>Owen's Javascript Programs</title>
 </head>
