--- a/javascript.html
+++ b/javascript.html
@@ -6,8 +6,8 @@
 <style> 
  h1 {color:white;}
  p  {color:white;}
- h2 {height: 50%;
-     width: 50%; }
+ h2 {height: auto;
+     width: auto; }
  </style>
 <title>Owen's Javascript Programs</title>
 </head>
