--- a/javascript.html
+++ b/javascript.html
@@ -6,8 +6,12 @@
 <style> 
  h1 {color:white;}
  p  {color:white;}
- h2 {height: auto;
-     width: auto; }
+ #race {width: 40px;
+  height: 40px;}
+ #dance {width: 40px;
+  height: 40px;}
+ #resize {width: 40px;
+  height: 40px;}
  </style>
 <title>Owen's Javascript Programs</title>
 </head>
@@ -23,11 +27,11 @@
  <p> This page contains Javascripts apps that I have written and designed </p>
   Back to <a href="https://owen-madsen.github.io/index.html"> home page </a>
  <h2><a href="https://www.khanacademy.org/computer-science/madsen_racingbitmoji/6178286814855168">Madsen_racingBitmoji</a></h2><script src="https://github.com/owen-madsen/owen-madsen.github.io/blob/master/Race"></script> 
- <h2> <img src="RacingBitmoji.jpg">
+ <h2 id="race"> <img src="RacingBitmoji.jpg">
  </h2>
- <h2> <img src="DancingBitmoji.jpg">
+ <h2 id="dance"> <img src="DancingBitmoji.jpg">
  </h2>
- <h2> <img src="ResizeBitmoji.jpg">
+ <h2 id="resize"> <img src="ResizeBitmoji.jpg">
  </h2>
 </body>
 </html>
