--- a/javascript.html
+++ b/javascript.html
@@ -7,7 +7,8 @@
  h1 {color:white;}
  p  {color:white;}
  #race {width: 40px;
-  height: 40px;}
+  height: 40px;
+ float: right;}
  #dance {width: 40px;
   height: 40px;}
  #resize {width: 40px;
