--- a/javascript.html
+++ b/javascript.html
@@ -10,9 +10,11 @@
   height: 40px;
  float: right;}
  #dance {width: 40px;
-  height: 40px;}
+  height: 40px;
+ float: right;}
  #resize {width: 40px;
-  height: 40px;}
+  height: 40px;
+ float: right;}
  </style>
 <title>Owen's Javascript Programs</title>
 </head>
