--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
   #lax {float: right;
   height: 30%;
   width: 30%;
-  margin: 10px}
+  margin: 15px;}
   body {background-image: url"myBackground.jpg"};
   }
   
