--- a/javascript.html
+++ b/javascript.html
@@ -7,14 +7,11 @@
  h1 {color:white;}
  p  {color:white;}
  #race {width: 40px;
-  height: 40px;
- float: right;}
+  height: 40px;}
  #dance {width: 40px;
-  height: 40px;
- float: right;}
+  height: 40px;}
  #resize {width: 40px;
-  height: 40px;
- float: right;}
+  height: 40px;}
  </style>
 <title>Owen's Javascript Programs</title>
 </head>
