--- a/javascript.html
+++ b/javascript.html
@@ -6,12 +6,12 @@
 <style> 
  h1 {color:white;}
  p  {color:white;}
- #race {width: 40px;
-  height: 40px;}
- #dance {width: 40px;
-  height: 40px;}
- #resize {width: 40px;
-  height: 40px;}
+ #race {width: 40%;
+  height: 40%;}
+ #dance {width: 40%;
+  height: 40%;}
+ #resize {width: 40%;
+  height: 40%;}
  </style>
 <title>Owen's Javascript Programs</title>
 </head>
