--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,8 @@
   body {background-image: url"myBackground.jpg"};
   }
   
-  p { margin: 5px;}
+  p { margin: 5px;
+  background-color: black;}
  </style> 
 <meta charset="utf-8">
 <title>About Me</title>
