--- a/javascript.html
+++ b/javascript.html
@@ -25,8 +25,8 @@
     <td><a href="https://owen-madsen.github.io/aboutme.html"> <img src="about.jpg" </a> </td>
 </table>
 <h1>Owen's Javascript Programs</h1>
- <p id="link"> This page contains Javascripts apps that I have written and designed </p>
-  Back to <a href="https://owen-madsen.github.io/index.html"> home page </a>
+ <p> This page contains Javascripts apps that I have written and designed </p>
+ <p id="link"> Back to <a href="https://owen-madsen.github.io/index.html"> home page </a> </p>
  <h2><a href="https://www.khanacademy.org/computer-science/madsen_racingbitmoji/6178286814855168">Madsen_racingBitmoji</a></h2><script src="https://github.com/owen-madsen/owen-madsen.github.io/blob/master/Race"></script> 
  <h2 id="race"> <img src="RacingBitmoji.jpg">
  </h2>
