--- a/javascript.html
+++ b/javascript.html
@@ -34,5 +34,6 @@
  </h2>
  <h2 id="resize"> <img src="ResizeBitmoji.jpg">
  </h2>
+ <h2><a href="https://www.khanacademy.org/computer-science/madsen_drybitmoji/6212291022782464"><img src="Bitmoji.png"></a></h2>
 </body>
 </html>
