--- a/javascript.html
+++ b/javascript.html
@@ -35,5 +35,6 @@
  <h2 id="resize"> <img src="ResizeBitmoji.jpg">
  </h2>
  <h2><a href="https://www.khanacademy.org/computer-science/madsen_drybitmoji/6212291022782464"><img src="BitmojiRain.png"></a></h2>
+ <h2><a href="https://www.khanacademy.org/computer-science/madsen_wardrobe/4803812188979200"><img src="Bitmoji_Wardrobe.png"></a></h2>
 </body>
 </html>
