--- a/javascript.html
+++ b/javascript.html
@@ -36,6 +36,6 @@
  </h2>
  <h2><a href="https://www.khanacademy.org/computer-science/madsen_drybitmoji/6212291022782464"><img src="BitmojiRain.png"></a></h2>
  <h2><a href="https://www.khanacademy.org/computer-science/madsen_wardrobe/4803812188979200"><img src="Bitmoji_Wardrobe.png"></a></h2>
-  <h2><a href="https://www.khanacademy.org/computer-science/madsen_wardrobe/4803812188979200"><img src="Bitmoji_Wardrobe.png"></a></h2>
+  <h2><a href="https://www.khanacademy.org/computer-science/madsen_educationalapp/4970625994555392"><img src="Madsen_EducationalApp.png"></a></h2>
 </body>
 </html>
