--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <td><a href="https://owen-madsen.github.io/javascript.html"> <img src="javascripts.jpg">  </a> </td> 
     <td><a href="https://owen-madsen.github.io/apps.html"> <img src="apps.jpg"> </a> </td>
     <td><a href="https://owen-madsen.github.io/aboutme.html"> <img src="about.jpg" </a> </td>
+    <td><a href="https://owen-madsen.github.io/Finalproject.html"> <img src="Final Project.jpg" </a> </td>
   </tr>   
 </table>
 <h1>Welcome to Owen's Programming Portfolio</h1>
