--- a/FinalProject.html
+++ b/FinalProject.html
@@ -13,10 +13,11 @@
     <td><a href="https://owen-madsen.github.io/javascript.html"> <img src="javascripts.jpg">  </a> </td> 
     <td><a href="https://owen-madsen.github.io/apps.html"> <img src="apps.jpg"> </a> </td>
     <td><a href="https://owen-madsen.github.io/aboutme.html"> <img src="about.jpg" </a> </td>
+    <td><a href="https://owen-madsen.github.io/FinalProject.html"> <img src="Final Project.jpg" </a> </td>
   </tr>   
 </table>
-<h1>Welcome to Owen's Programming Portfolio</h1>
-<p> My name is Owen Madsen. This website is my portfolio of programs that I have written for the CSC106 Computer Programming course at the University of Rhode Island. I designed the webpage myself using the html programming language. The Apps link above has apps I have written that run on phones. The Javascripts link above has Javascripts that I have written to be embedded in web pages. 
+<h1>Final Project</h1>
+<p> 
 </p>
 
 
