--- a/javascript.html
+++ b/javascript.html
@@ -23,6 +23,7 @@
     <td><a href="https://owen-madsen.github.io/javascript.html"> <img src="javascripts.jpg">  </a> </td> 
     <td><a href="https://owen-madsen.github.io/apps.html"> <img src="apps.jpg"> </a> </td>
     <td><a href="https://owen-madsen.github.io/aboutme.html"> <img src="about.jpg" </a> </td>
+    <td><a href="https://owen-madsen.github.io/FinalProject.html"> <img src="Final Project.jpg" </a> </td>
 </table>
 <h1>Owen's Javascript Programs</h1>
  <p> This page contains Javascripts apps that I have written and designed </p>
