--- a/FinalProject.html
+++ b/FinalProject.html
@@ -19,7 +19,7 @@
 <h1>Final Project</h1>
 <p> My program is a virtual soccer shootout! In this game you are pitted against a laterally active A.I. soccer goalkeeper who is defending your powerful shots. The game counts down from 500 seconds and every 100 second interval, the goal keepers lateral speed increases by 2. The Start screen will guide to with two buttons, which either will take you to the game itself with the “play soccer” button or the instructions page with the “training” button.
 </p>
- <p> click <a href="https://www.khanacademy.org/computer-science/final/4779523153297408"> HERE </a> to visit my actual program on Khan Academy.
+ <p> Here, try it out!
  </p>
 
 
