--- a/FinalProject.html
+++ b/FinalProject.html
@@ -24,7 +24,7 @@
   <iframe width="560" height="315" src="https://www.youtube.com/embed/7idslBQGH8A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  </p>
  <p> you can also try it out yourself if you'd like down here! </p>
- <h2><a href="https://www.khanacademy.org/computer-science/final/4779523153297408">final</a></h2><script src="https://www.khanacademy.org/computer-science/final/4779523153297408/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+ <p><a href="https://www.khanacademy.org/computer-science/final/4779523153297408">final</a></p><script src="https://www.khanacademy.org/computer-science/final/4779523153297408/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
 
 
 </body>
