--- a/FinalProject.html
+++ b/FinalProject.html
@@ -30,7 +30,7 @@
  </p>
  <p> you can also try it out yourself if you'd like down here! </p>
  <h1><a href="https://www.khanacademy.org/computer-science/madsen_final/4779523153297408">final</a></h1><script src="https://www.khanacademy.org/computer-science/final/4779523153297408/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
-<p>Scrum Document <img src="Madsen_scrum.png" alt="Scrum Document">
+<p>Scrum Document <img src="Madsen_scrum.png" alt="Scrum Document" style="width:400px;height:300px;">
  </p>
 </body>
 </html>
