--- a/FinalProject.html
+++ b/FinalProject.html
@@ -23,14 +23,11 @@
  <p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/89XhuOHbOcA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  </p>
- <p>
-  Code Walkthrough Video </p>
- <p>
-  <iframe width="560" height="315" src="https://www.youtube.com/watch?v=89XhuOHbOcA&t=2s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
- </p>
+ <p> Code Walkthrough Video </p>
+ <p> <iframe width="560" height="315" src="https://www.youtube.com/embed/89XhuOHbOcA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </p>
  <p> you can also try it out yourself if you'd like down here! </p>
  <h1><a href="https://www.khanacademy.org/computer-science/madsen_final/4779523153297408">final</a></h1><script src="https://www.khanacademy.org/computer-science/final/4779523153297408/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
-<p>Scrum Document <img src="Madsen_scrum.png" alt="Scrum Document" style="width:400px;height:300px;">
- </p>
+ <p>Scrum Document</p> 
+ <img src="Madsen_scrum.png" alt="Scrum Document" style="width:400px;height:300px;">
 </body>
 </html>
