--- a/FinalProject.html
+++ b/FinalProject.html
@@ -26,8 +26,8 @@
  <p> Code Walkthrough Video </p>
  <p> <iframe width="560" height="315" src="https://www.youtube.com/embed/89XhuOHbOcA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </p>
  <p> you can also try it out yourself if you'd like down here! </p>
- 
-<script src="https://www.khanacademy.org/computer-science/final/4779523153297408/embed.js?editor=yes&amp;buttons=yes&amp;author=yes&amp;embed=yes"></script>
+ <iframe src="https://www.khanacademy.org/computer-science/madsen_final/4779523153297408/embed.js?editor=yes&buttons=yes&author=yes&embed=yes" frameborder="0" scrolling="no" style="border: 0px; width: 940px; height: 467px;"></iframe>
+ <script src="https://www.khanacademy.org/computer-science/madsen_final/4779523153297408/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
  
  
  <p>Scrum Document</p> 
