--- a/FinalProject.html
+++ b/FinalProject.html
@@ -3,6 +3,10 @@
 <head>
 <title>Owen's Programming Portfolio</title>
 <link rel="stylesheet" type="text/css" href="style.css">
+<style>
+ a:link {color: white;}
+ a:hover {color:yellow;}
+ </style>
 <meta charset="utf-8">
 </head>
 <body>
